--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ quote = "1.0.37"
 rand = "0.8.5"
 regex = "1.10.6"
 regress = "0.10.1"
-reqwest = { version = "0.11.27", default-features = false, features = ["json", "stream", "multipart"] }
+reqwest = { version = "0.11.27", default-features = false, features = ["json", "stream"] }
 rustfmt-wrapper = "0.2.1"
 schemars = { version = "0.8.21", features = ["chrono", "uuid1"] }
 serde = { version = "1.0.210", features = ["derive"] }
